# dango

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  STANDARDS.md  VERSIONS.md  constraints.txt  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
dango/: CLAUDE.md  __init__.py  exceptions.py  logging.py  validation.py
dango/analysis/: CLAUDE.md  __init__.py  comparisons.py  config.py  drilldown.py  formatter.py  metrics.py  models.py  templates.py
dango/auth/: CLAUDE.md  __init__.py  admin.py  audit.py  database.py  lockout.py  metabase_bridge.py  metabase_sync.py  models.py  oauth_login.py  permissions.py  security.py  sessions.py  totp.py
dango/cli/: CLAUDE.md  __init__.py  db_helpers.py  env_helpers.py  init.py  main.py  model_wizard.py  oauth.py  schema_manager.py  source_wizard.py  utils.py  validate.py  wizard.py
dango/cli/commands/: __init__.py  analyze.py  auth.py  cleanup.py  config_cmd.py  dashboard.py  data.py  deploy.py  deploy_provision.py  deploy_wizard.py  dev.py  governance.py  metabase_cmd.py  migrate.py  model.py  notebook.py  oauth.py  platform.py  project.py  remote.py  remote_auth.py  remote_backup.py  remote_env.py  remote_mgmt.py  remote_ops.py  remote_repair.py  remote_sync.py  schedule.py  schedule_webhook.py  serve.py  snapshot.py  source.py  transform.py  upgrade.py  web.py
dango/cli/helpers/: __init__.py  port_manager.py  process_manager.py
dango/config/: CLAUDE.md  __init__.py  cloud_credentials.py  credentials.py  exceptions.py  helpers.py  loader.py  models.py  schedules.py
dango/governance/: CLAUDE.md  __init__.py  models.py  pii_detector.py  pii_overrides.py  schema_drift.py
dango/ingestion/: CLAUDE.md  __init__.py  csv_loader.py  dlt_runner.py
dango/ingestion/sources/: __init__.py  registry.py
dango/migrations/: CLAUDE.md  __init__.py  runner.py
dango/migrations/auth/: 001_initial_auth.py  002_complete_auth_schema.py  003_metabase_password.py  004_invite_tokens.py  005_login_attempts.py  006_password_changed_at.py  __init__.py
dango/migrations/scheduler/: 001_execution_history.py  __init__.py
dango/notebooks/: CLAUDE.md  __init__.py  locking.py  manager.py  proxy.py  snapshot.py
dango/notebooks/templates/: __init__.py  blank.py  explore.py  quality.py
dango/oauth/: CLAUDE.md  __init__.py  providers.py  router.py  storage.py  validation.py  web_flow.py
dango/platform/: CLAUDE.md  __main__.py  docker.py  network.py  sync_process.py  watcher.py  watcher_lifecycle.py  watcher_runner.py
dango/platform/cloud/: __init__.py  _server_templates.py  backup.py  deploy_journal.py  deployer.py  digitalocean.py  domain.py  file_sync.py  ssh.py  (+9 more)
dango/security/: CLAUDE.md  token_storage.py
dango/templates/: CLAUDE.md  Dockerfile.metabase  docker-compose.yml.j2  entrypoint.sh
dango/transformation/: CLAUDE.md  __init__.py  generator.py
dango/utils/: CLAUDE.md  __init__.py  activity_log.py  dango_db.py  data_validation.py  database.py  db_health.py  dbt_lock.py  dbt_status.py  driver.py  env_file.py  git_info.py  log_rotation.py  post_sync.py  process.py  sync_history.py
dango/visualization/: CLAUDE.md  __init__.py  dashboard_manager.py  metabase.py
dango/web/: CLAUDE.md  __init__.py  app.py  helpers.py  models.py
docs/: ADVANCED_USAGE.md  MULTI_ACCOUNT_OAUTH.md  MVP_PLAN.md  OAUTH_SETUP.md  REGISTRY_BYPASS.md  START_HERE.md  TESTING_PLAN.md  file-exemptions.yml  sync-semantics.md
docs/decisions/: ADR-001-sqlite-for-authentication.md  ADR-002-apscheduler-over-celery.md  ADR-003-duckdb-single-file-warehouse.md  ADR-004-marimo-over-jupyterlite.md  ADR-005-digitalocean-only-for-v1.md  ADR-006-caddy-for-ssl.md  ADR-007-frontend-approach.md  README.md
docs/guides/: deploy-any-server.md  monitoring.md
docs/sources/: README.md  known-limitations.md  non-wizard-sources.md  oauth-pattern.md
docs/templates/: CLAUDE_TEMPLATE.md
scripts/: check_claude_md_staleness.py  check_docstrings.py  check_file_sizes.py  check_js_null_guards.py  check_orphan_files.py  check_pinned_deps.py  check_python_compat.py  check_version_alignment.py  integration_test.sh  run_tests.sh  smoke_test.sh  validate_claude_md.py  validate_headers.py
tests/: __init__.py  conftest.py
tests/factories/: __init__.py  cloud_factories.py  config_factories.py  oauth_factories.py
tests/fixtures/: invalid_project.yml  valid_project.yml  valid_sources.yml
tests/integration/: conftest.py  test_analysis_integration.py  test_auth_api.py  test_auth_middleware_integration.py  test_catalog_integration.py  test_config_loading.py  test_deploy.py  test_digitalocean.py  test_drift_integration.py  test_metabase_duckdb.py  test_metabase_sso.py  test_notebook_lifecycle.py  test_phase7_gate.py  test_pii_integration.py  test_post_sync_chain_integration.py  test_remote.py  test_scheduler_integration.py  test_sync_notification.py
tests/llm/: navigation_test.md
tests/unit/: conftest.py  test_activity_logging_gaps.py  test_analysis_comparisons.py  test_analysis_config.py  test_analysis_drilldown.py  test_analysis_formatter.py  test_analysis_metrics.py  test_analysis_models.py  test_analysis_templates.py  test_analyze_error.py  test_auth_admin.py  test_auth_api_keys.py  test_auth_audit.py  test_auth_database.py  test_auth_lockout.py  test_auth_middleware.py  test_auth_middleware_helpers.py  test_auth_models.py  test_auth_oauth_login.py  test_auth_permissions.py  test_auth_security.py  test_auth_sessions.py  test_auth_totp.py  test_backup.py  test_byos.py  test_caddyfile.py  test_catalog_api.py  test_catalog_lineage.py  test_catalog_models.py  test_catalog_search.py  test_cleanup.py  test_cli_analyze.py  test_cli_auth.py  test_cli_commands.py  test_cli_dev.py  test_cli_init_ci.py  test_cli_remote_env.py  test_cli_schedule.py  test_cli_schedule_webhook.py  test_cli_start_guardrails.py  (+157 more)
(+118 files in other folders)
