[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getdango"
version = "0.1.1"
description = "Open source data platform built with production-grade tools - dlt, dbt, DuckDB, and Metabase"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dango Team"}
]
keywords = ["data", "analytics", "dbt", "duckdb", "metabase", "dlt", "etl", "data-platform", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # Critical dependencies - use compatible release for stability
    "duckdb~=1.4.0",      # Database - latest stable
    "dbt-core~=1.10.0",   # Core tool - latest stable (requires protobuf 6.x)
    "dbt-duckdb~=1.10.0", # Adapter - must match dbt-core
    "dlt[duckdb]>=1.17.0,<2.0", # ETL tool - allow 1.17+ for Python 3.13/3.14 support

    # Framework and utilities - flexible versions
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.4",
    "watchdog>=5.0.0",
    "rich>=13.7.0",
    "inquirer>=3.4.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "structlog>=24.1.0",

    # Security and encryption
    "keyring>=24.0.0",    # Secure credential storage in OS keychain
    "cryptography>=41.0.0",  # Token encryption
    "pwdlib[bcrypt]>=0.3.0,<1.0",  # Password hashing (bcrypt)
    "pyotp>=2.9,<3.0",   # TOTP two-factor authentication
    "toml>=0.10.2",       # TOML file parsing for .dlt/secrets.toml

    # Google API dependencies (for bundled Google Sheets source)
    "google-api-python-client>=2.100.0",  # Google Sheets API
    "google-auth-oauthlib>=1.0.0",        # OAuth for Google services
    "google-auth>=2.22.0",                # Google authentication

    # Cloud deployment
    "boto3>=1.34.0",      # DigitalOcean Spaces (S3-compatible)
    "paramiko>=3.0.0",    # SSH key management and remote execution

    # Scheduling
    "apscheduler>=3.11,<4",   # Job scheduling (AsyncIOScheduler + SQLAlchemy job store)
    "sqlalchemy>=2.0,<3",     # Required by APScheduler SQLAlchemyJobStore
    "croniter>=2.0,<4",       # Cron expression validation and iteration
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-toml>=0.10.0",
    "types-aiofiles>=23.2.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
# Note: dlt distributes sources via `dlt init <source>`, not pip extras.
# dlt's pip extras are for DESTINATIONS (duckdb, bigquery, etc.) and infrastructure.
# Source code is bundled in dango/ingestion/dlt_sources/ with all necessary dependencies.

[project.urls]
Homepage = "https://getdango.dev"
Documentation = "https://docs.getdango.dev"
Repository = "https://github.com/getdango/dango"
Issues = "https://github.com/getdango/dango/issues"

[project.scripts]
dango = "dango.cli.main:cli"

[tool.setuptools]
packages = [
    "dango",
    "dango.auth",
    "dango.cli",
    "dango.config",
    "dango.ingestion",
    "dango.ingestion.sources",
    "dango.ingestion.dlt_sources",
    "dango.transformation",
    "dango.platform",
    "dango.platform.local",
    "dango.platform.common",
    "dango.platform.cloud",
    "dango.platform.scheduling",
    "dango.platform.notifications",
    "dango.templates",
    "dango.utils",
    "dango.visualization",
    "dango.web",
    "dango.web.routes",
    "dango.auth",       # Authentication & authorization
    "dango.oauth",      # OAuth management
    "dango.security",   # Token encryption
    "dango.migrations",
    "dango.cli.commands",
    "dango.cli.helpers",
]
include-package-data = true

[tool.setuptools.package-data]
dango = [
    "templates/**/*",
    "ingestion/dlt_sources/**/*",
    "web/templates/**/*",
    "web/static/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["dango/ingestion/dlt_sources/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["dango/ingestion/dlt_sources/"]

[[tool.mypy.overrides]]
module = [
    "inquirer",
    "inquirer.*",
    "googleapiclient",
    "googleapiclient.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "paramiko",
    "paramiko.*",
    "apscheduler",
    "apscheduler.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "croniter",
    "croniter.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    # Exempt monolithic files (see docs/file-exemptions.yml)
    # Full type checking deferred until refactoring or dedicated typing task
    "dango.ingestion.dlt_runner",
    "dango.ingestion.sources.registry",
    "dango.ingestion.csv_loader",
    "dango.cli.source_wizard",
    "dango.cli.init",
    "dango.cli.model_wizard",
    "dango.cli.validate",
    "dango.cli.commands.platform",
    # dango.cli.commands.auth — removed by TASK-009 (mypy errors fixed)
    "dango.cli.commands.source",
    "dango.visualization.metabase",
    "dango.visualization.dashboard_manager",
    "dango.transformation.generator",
    "dango.platform.local.watcher",
    "dango.platform.local.watcher_runner",
    "dango.oauth.providers",
    "dango.web.helpers",
    "dango.web.routes.upload",
    # Test files: test method type annotations not required (untyped defs)
    "tests.unit.test_watcher_lifecycle",
    "tests.unit.test_cloud_config",
    "tests.unit.test_cloud_config_loader",
    "tests.unit.test_platform_startup",
    "tests.unit.test_platform_imports",
    "tests.unit.test_digitalocean_client",
    "tests.unit.test_spaces_client",
    "tests.unit.test_ssh_manager",
    "tests.unit.test_ssh_sftp",
    "tests.unit.test_provisioning",
    "tests.unit.test_firewall",
    "tests.unit.test_remote_cli",
    "tests.unit.test_server_setup",
    "tests.unit.test_serve_command",
    "tests.unit.test_oauth_web_flow",
    "tests.unit.test_cli_remote_env",
    "tests.unit.test_web_secrets",
    "tests.unit.test_web_oauth_connect",
    "tests.unit.test_caddyfile",
    "tests.unit.test_domain",
    "tests.unit.test_rate_limit_proxy",
    "tests.unit.test_domain_cli",
    "tests.unit.test_server_status",
    "tests.unit.test_remote_management_cli",
    "tests.unit.test_deploy_destroy",
    "tests.unit.test_backup",
    "tests.unit.test_scheduled_backup",
    "tests.unit.test_remote_backup_cli",
    "tests.unit.test_file_sync",
    "tests.unit.test_deployer",
    "tests.unit.test_deployer_push",
    "tests.unit.test_deploy_wizard",
    "tests.unit.test_deploy_provision",
    "tests.unit.test_initial_sync",
    "tests.unit.test_upgrade",
    "tests.unit.test_resize",
    "tests.unit.test_migrate",
    "tests.unit.test_remote_ops_cli",
    "tests.unit.test_cli_sync",
    "tests.unit.test_webhook",
    "tests.unit.test_slack_formatter",
    "tests.unit.test_scheduler",
    "tests.unit.test_scheduler_resilience",
    "tests.unit.test_schedules_config",
    "tests.unit.test_schedules_loading",
    "tests.unit.test_sync_jobs",
    "tests.unit.test_execution_history",
    "tests.unit.test_schedule_history_api",
    "tests.integration.test_digitalocean",
    "tests.integration.test_deploy",
    "tests.integration.test_remote",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (no external services or network — tmp_path filesystem operations are allowed)",
    "integration: Integration tests (may use temp dirs, real files, DuckDB)",
    "cloud: Cloud integration tests (requires DIGITALOCEAN_TOKEN, on-demand CI)",
]
addopts = "--strict-markers"
