[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "getdango"
version = "1.0.0b1"
description = "Open source data platform built with production-grade tools - dlt, dbt, DuckDB, and Metabase"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache-2.0"}
authors = [
    {name = "Dango Team"}
]
keywords = ["data", "analytics", "dbt", "duckdb", "metabase", "dlt", "etl", "data-platform", "open-source"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    # ── Tier 1: tightly coupled (change as a group, see VERSIONS.md) ──────
    # DuckDB Python + Metabase JDBC driver must share the same DuckDB
    # major.minor. Read-only mode CANNOT cross versions.
    "duckdb>=1.5.0,<1.6",         # Tier 1 — must match driver (driver.py)
    "dbt-duckdb>=1.10.0,<1.11",   # Tier 1 — must match dbt-core
    # ── Tier 2: semi-coupled (patch safe, minor needs testing) ────────────
    "dbt-core~=1.10.0",           # Tier 2 — 1.11 is breaking
    "dlt[duckdb]~=1.24.0",        # Tier 2 — latest stable

    # Framework and utilities - flexible versions
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",       # CVE-2026-28684 fixed in 1.2.2
    "jinja2>=3.1.4",
    "watchdog>=5.0.0",
    "rich>=13.7.0",
    "inquirer>=3.4.0",
    "requests>=2.33.0",           # CVE-2026-25645 fixed in 2.33.0
    "httpx>=0.27.0,<1.0",            # httpx 1.0 removes TimeoutException
    "idna>=3.15",                     # CVE fix — transitive via httpx/requests/anyio
    "starlette>=1.0.1",               # PYSEC-2026-161 fixed in 1.0.1
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.27",   # CVE-2026-40347, CVE-2026-42561 fixed in 0.0.27
    "websockets>=12.0",
    "aiofiles>=23.2.0",
    "psutil>=5.9.0",
    "structlog>=24.1.0",
    "tomlkit>=0.13.0",            # TOML read/write with style preservation (source_wizard, dlt_runner)

    # Data governance and notebooks
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "marimo>=0.23.0",             # CVE-2026-39987 fixed in 0.23.0
    "presidio-analyzer>=2.2.0",
    "spacy>=3.8.0,<3.9",          # en_core_web_sm-3.8.0 model requires >=3.8.0,<3.9.0

    # Security and encryption
    "keyring>=24.0.0",    # Secure credential storage in OS keychain
    "cryptography>=46.0.7",  # Token encryption; CVE-2026-26007/34073/39892 fixed in 46.0.7
    "pwdlib[bcrypt]>=0.3.0,<1.0",  # Password hashing (bcrypt)
    "pyotp>=2.9,<3.0",   # TOTP two-factor authentication
    "toml>=0.10.2",       # TOML file parsing for .dlt/secrets.toml

    # Google API dependencies (for bundled Google Sheets source)
    "google-api-python-client>=2.100.0",  # Google Sheets API
    "google-auth-oauthlib>=1.0.0",        # OAuth for Google services
    "google-auth>=2.22.0",                # Google authentication

    # Cloud deployment
    "boto3>=1.34.0",      # DigitalOcean Spaces (S3-compatible)
    "paramiko>=3.0.0",    # SSH key management and remote execution; CVE-2026-44405 has no fix yet

    # Scheduling
    "apscheduler>=3.11,<4",   # Job scheduling (AsyncIOScheduler + SQLAlchemy job store)
    "sqlalchemy>=2.0,<3",     # Required by APScheduler SQLAlchemyJobStore
    "croniter>=2.0,<4",       # Cron expression validation and iteration
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",              # CVE-2025-71176 fixed in 9.0.3
    "pytest-cov>=5.0.0",
    "black>=24.0.0",  # CVE-2026-32274 in <26.3.1; bump blocked by dbt-core pydantic<2 conflict
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
    "types-toml>=0.10.0",
    "types-aiofiles>=23.2.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
# Note: dlt distributes sources via `dlt init <source>`, not pip extras.
# dlt's pip extras are for DESTINATIONS (duckdb, bigquery, etc.) and infrastructure.
# Source code is bundled in dango/ingestion/dlt_sources/ with all necessary dependencies.

[project.urls]
Homepage = "https://getdango.dev"
Documentation = "https://docs.getdango.dev"
Repository = "https://github.com/getdango/dango"
Issues = "https://github.com/getdango/dango/issues"

[project.scripts]
dango = "dango.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dango", "dango.*"]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
dango = [
    "templates/**/*",
    "ingestion/dlt_sources/**/*",
    "web/templates/**/*",
    "web/static/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["dango/ingestion/dlt_sources/"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["dango/ingestion/dlt_sources/"]

[[tool.mypy.overrides]]
module = [
    "inquirer",
    "inquirer.*",
    "googleapiclient",
    "googleapiclient.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "paramiko",
    "paramiko.*",
    "apscheduler",
    "apscheduler.*",
    "sqlalchemy",
    "sqlalchemy.*",
    "croniter",
    "croniter.*",
    "marimo",
    "marimo.*",
    "presidio_analyzer",
    "presidio_analyzer.*",
    "spacy",
    "spacy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    # Exempt monolithic files (see docs/file-exemptions.yml)
    # Full type checking deferred until refactoring or dedicated typing task
    "dango.notebooks.templates.explore",
    "dango.notebooks.templates.quality",
    "dango.notebooks.templates.blank",
    "dango.ingestion.dlt_runner",
    "dango.ingestion.csv_loader",
    "dango.cli.source_wizard",
    "dango.cli.init",
    "dango.cli.model_wizard",
    "dango.cli.validate",
    "dango.cli.commands.platform",
    # dango.cli.commands.auth — removed by TASK-009 (mypy errors fixed)
    "dango.cli.commands.source",
    "dango.visualization.metabase",
    "dango.visualization.dashboard_manager",
    "dango.transformation.generator",
    "dango.platform.local.watcher",
    "dango.platform.local.watcher_runner",
    "dango.oauth.providers",
    "dango.web.helpers",
    "dango.web.routes.upload",
    # Test files: pattern-based exemption (test methods don't need type annotations)
    "tests.unit.*",
    "tests.integration.*",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Unit tests (no external services or network — tmp_path filesystem operations are allowed)",
    "integration: Integration tests (may use temp dirs, real files, DuckDB)",
    "cloud: Cloud integration tests (requires DIGITALOCEAN_TOKEN, on-demand CI)",
]
addopts = "--strict-markers"
